kubernetes/homeassistant/components/music/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: music-assistant-server
  namespace: homeassistant
  labels:
    app: music-assistant-server
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    #   checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
    checkov.io/skip2: CKV_K8S_20=Containers Runs CHOWN and MKDIR
    checkov.io/skip3: CKV_K8S_25=Containers Runs CHOWN and MKDIR
    checkov.io/skip4: CKV_K8S_16=Can't figure out non priv yet
    checkov.io/skip5: CKV_K8S_39=Can't figure out non priv yet
spec:
  replicas: 1
  serviceName: music-assistant-server
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: music-assistant-server
  template:
    metadata:
      labels:
        app: music-assistant-server
      annotations:
        enable.version-checker.io/homeassistant: "true"
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        fsGroup: 1001080000 # Custom OKD UID
      serviceAccountName: homeassistant-sa
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: music-assistant-server
          image: ghcr.io/music-assistant/server:2.10.4@sha256:37a9a2776e838a754c9f5b38c432567389952304e7cb8f6b44b6cd28043de6de
          volumeMounts:
            - name: data
              mountPath: /data
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1001080000 # Custom OKD UID
          ports:
            # - hostPort: 8095
            - containerPort: 8095
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 4Gi
            requests:
              cpu: 10m
              memory: 2Gi
          livenessProbe:
            httpGet:
              path: /
              port: 8095
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            initialDelaySeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8095
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            initialDelaySeconds: 3
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /
              port: 8095
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
            initialDelaySeconds: 3
            failureThreshold: 30
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      automountServiceAccountToken: false
      # hostNetwork: true
      hostname: homeassistant
      schedulerName: default-scheduler

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: music-assistant-server
      enableServiceLinks: false
