kubernetes/homeassistant/components/music/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: music-assistant-server
  namespace: homeassistant
  labels:
    app: music-assistant-server
spec:
  selector:
    app: music-assistant-server
  ports:
    - protocol: TCP
      port: 8095
      targetPort: 8095
      name: http
  type: ClusterIP
